<resources>
    <string name="app_name">Pokedex</string>
    <string name="home_title">Pokédex</string>
    <string name="home_subtitle">Search for any Pokémon that exists on the planet</string>
    <string name="search_hint">Name or Number</string>
    <string name="read_more"><u>read more</u></string>
    <string name="description">Spits fire that is hot enough to melt boulders. Known to cause forest fires unintentionally. When expelling a blast of super . . .read more</string>
    <string name="stats">Stats</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="gender">Gender</string>
    <string name="egg_groups">Egg Groups</string>
    <string name="abilities">Abilities</string>
    <string name="types">Types</string>
    <string name="weak_against">Weak Against</string>
    <string name="evolution_chain">Evolution Chain</string>
    <string name="close">close</string>
    <string name="type">Type</string>
    <string name="filters">Filters</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="choose_filter">Choose Filter</string>
    <string name="filter">filter</string>
    <string name="expand_collapse">expand collapse</string>
    <string name="loading">Loading</string>
    <string name="pokemon_image">Pokemon image</string>
    <string name="next_arrow">next arrow</string>
</resources>