<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/content_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/dim_25"
            android:paddingEnd="@dimen/dim_25">

            <TextView
                android:id="@+id/fragmentListTitle"
                style="@style/TextThemeLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_50"
                android:fontFamily="@font/roboto"
                android:letterSpacing="0.06"
                android:text="@string/home_title" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_12"
                android:minHeight="@dimen/dim_1"
                app:dividerColor="@color/dark_electric_blue"
                app:dividerThickness="@dimen/dim_1" />

            <TextView
                android:id="@+id/fragmentListSubTitle"
                style="@style/TextThemeMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_10"
                android:text="@string/home_subtitle" />

            <LinearLayout
                android:id="@+id/search_filter_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:weightSum="1"
                android:layout_marginTop="@dimen/dim_35"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_search"
                    style="@style/SearchViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:hint="@string/search_hint"
                    android:imeOptions="actionDone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageButton
                    android:id="@+id/filter_button"
                    android:layout_width="0dp"
                    android:layout_marginStart="@dimen/dim_10"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/filter"
                    android:src="@drawable/ic_filter" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_gravity="center"
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_30"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/loaderView"
        android:orientation="vertical"
        android:background="@color/black"
        android:alpha="0.4"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ProgressBar
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:id="@+id/loadingData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        <TextView
            android:layout_below="@+id/loadingData"
            android:layout_centerHorizontal="true"
            android:text="@string/loading"
            style="@style/TextThemeBold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</FrameLayout>